--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ async-trait = "0.1"
 axum = "^0.7"
 base64 = "0.22"
 bytes = "1"
+clap = { version = "4", features = ["derive"] }
 ed25519-dalek = "2"
 futures = "0.3"
 infer = "0.19"
