--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ infer = "0.19"
 lru = "^0.16"
 mime_guess = "2"
 object_store = { version = "0.13", features = ["aws", "azure"] }
+sentry = "0.34"
+sentry-tower = "0.34"
+sentry-tracing = "0.34"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_yaml = "0.9"
