--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ base64 = "0.22"
 bytes = "1"
 clap = { version = "4", features = ["derive"] }
 ed25519-dalek = { version = "2", features = ["rand_core"] }
+envious = "0.2.2"
 futures = "0.3"
 infer = "0.19"
 lru = "^0.16"
@@ -27,6 +28,7 @@ thiserror = "^2"
 time = { version = "0.3", features = ["std"] }
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
+tracing-error = "0.2.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 
 [dev-dependencies]
