--- a/config.example.yaml
+++ b/config.example.yaml
@@ -3,6 +3,7 @@ listen: "0.0.0.0:8080"
 auth:
   public_key: "BASE64URL_PUBLIC_KEY"
   private_key: "BASE64URL_PRIVATE_KEY"
+  bearer_token: null
 
 cache:
   ttl_seconds: 3600
