--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ mime_guess = "2"
 object_store = { version = "0.13", features = ["aws", "azure"] }
 rand = "0.8"
 sentry = "^0.46"
-sentry-tower = "0.34"
+sentry-tower = "^0.46"
 sentry-tracing = "^0.46.2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -27,6 +27,7 @@ serde_yaml = "0.9"
 thiserror = "^2"
 time = { version = "0.3", features = ["std"] }
 tokio = { version = "1", features = ["full"] }
+tower-http = { version = "0.6.8", features = ["trace"] }
 tracing = "0.1"
 tracing-error = "0.2.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
