--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,13 @@ anyhow = "1"
 async-trait = "0.1"
 axum = "^0.8"
 base64 = "0.22"
-bytes = "1"
+bytes = { version = "1", features = ["serde"] }
 clap = { version = "4", features = ["derive"] }
 ed25519-dalek = { version = "2", features = ["rand_core"] }
 envious = "0.2.2"
 futures = "0.3"
 infer = "0.19"
+foyer = "0.12"
 lru = "^0.16"
 mime_guess = "2"
 object_store = { version = "0.13", features = ["aws", "azure"] }
