--- a/config.example.yaml
+++ b/config.example.yaml
@@ -8,6 +8,9 @@ auth:
 cache:
   ttl_seconds: 3600
   max_bytes: 1073741824
+  # Optional: enable hybrid disk-memory cache (Foyer)
+  # disk_capacity_bytes: 1073741824  # 1GB disk cache
+  # disk_path: "/var/lib/cachegate/cache"
 
 sentry:
   dsn: null
