--- a/config.example.yaml
+++ b/config.example.yaml
@@ -7,9 +7,9 @@ auth:
 
 cache:
   ttl_seconds: 3600
-  max_bytes: 1073741824
+  max_memory: 1GB
   # Optional: enable hybrid disk-memory cache (Foyer)
-  # disk_capacity_bytes: 1073741824  # 1GB disk cache
+  # max_disk: 1GB
   # disk_path: "/var/lib/cachegate/cache"
 
 sentry:
