--- a/config.example.yaml
+++ b/config.example.yaml
@@ -8,6 +8,7 @@ auth:
 cache:
   ttl_seconds: 3600
   max_memory: 1GB
+  max_object_size: 64MiB
   # Optional: enable hybrid disk-memory cache (Foyer)
   # max_disk: 1GB
   # disk_path: "/var/lib/cachegate/cache"
